--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,31 @@
+.App {
 
-.App{
-    background: var( --background-color);
-   h1,h2,h3,h4,h5,h6{
-    margin: 0;
-    color: var(--text-color-dark);
-   }
-   a{
-    color: var(--text-color-dark);
-   }
-   ul{
-    color: var(--text-color-dark);
-   }
-   link{
-    color: var(--text-color-dark);
-   }
-   
+    background: var(--background-color);
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 0;
+        color: var(--text-color-dark);
+    }
+
+    a {
+        color: var(--text-color-dark);
+    }
+
+    ul {
+        color: var(--text-color-dark);
+    }
+
+    link {
+        color: var(--text-color-dark);
+    }
+    p{
+        color:var(--text-color-dark)
+    }
+
 }
