--- a/src/Componentes/Header/NavBar/NavBar.css
+++ b/src/Componentes/Header/NavBar/NavBar.css
@@ -6,6 +6,7 @@
   top: 0;
   z-index: 10;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -36,8 +37,7 @@
 }
 
 .nav-logo-title {
-  padding: 0% 20% 0% 20%;
-
+  
   .text-logo {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
