--- a/src/Componentes/Body/CursorMonster/CursorMonster.css
+++ b/src/Componentes/Body/CursorMonster/CursorMonster.css
@@ -1,18 +1,22 @@
 .cursor-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-  }
-  
-  .cursor-line {
-    position: absolute;
-    width: 1px;
-    height: 10px;
-    background-color: black;
-    opacity: 0.5;
-    transform: rotate(45deg);
-  }
-      
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.cursor-point {
+  position: absolute;
+  border-radius: 50%;
+  background-color: var(--text-accent);
+  transition: opacity 0.2s ease-out;
+}
+
+.cursor-line {
+  position: absolute;
+  height: 1px;
+  background-color:var(--neutral-light);
+  transform-origin: center;
+}
